# RAG_Agentic-AI_2

./: .gitattributes  .gitignore  app.py  build_rag.py  pyproject.toml  rag_tool.py  requirements.txt  test_rag_tool.py
data/chunks/: chunked_records.jsonl
data/cleaned/: cleaned_records.jsonl  file_hash_registry.json
data/microsoft access database/: up01FEB.mdb  up01JAN.mdb  up01JUL.mdb  up01NOV.mdb  up08AUG.mdb  up08FEB.mdb  up08JAN.mdb  up08NOV.mdb  up15OCT.mdb  up22APR.mdb  up22JUL.mdb  up22MAR.mdb  up22MAY.mdb
data/raw_records/: raw_records.jsonl
data/text_files/: APre1975.txt  Airport.txt  a2020_26.txt  avall.mdb  e1975_79.txt  e1995_99.txt
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  pdf_image_extractor.py  pdf_ocr_azure.py  search.py  test_loader.py  vectorstore.py
src/Chunking/: chunk_records.py  chunk_text.py
src/Data_Cleaning/: clean_records.py  clean_text.py
src/Data_Ingestion/: data_loader.py  deduplication.py  test_loader.py
src/Embeddings/: azure_search_upload.py  embed_chunks.py  test_embedding.py
src/Rag_pipeline/: build_index.py  build_rag.py  evaluation.py  generator.py  observability.py  prompts.py  query_optimizer.py  reranker.py  utils.py
src/Retrieval/: azure_retrieval.py
text_files/: a2005_09.txt
