[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.4",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.6.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-groq>=1.1.2",
    "pymupdf>=1.27.1",
    "pypdf>=6.8.0",
    "sentence-transformers>=5.2.3",
]
